--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,4 +1,5 @@
 <article>
+  
   <%= link_to product_path(product) do %>
     <%= image_tag product.image.thumb.url , alt: product.name %>
     <h1>
@@ -6,10 +7,20 @@
       <span><%= humanized_money_with_symbol product.price %></span>
     </h1>
   <% end%>
+  
   <div>
+  <% if product.quantity == 0 %>
+  <div class="soldout">Sold Out</div>
+  <%= button_to add_item_cart_path(product_id: product.id), class: 'btn disabled' , method: :post do %>
+      <%= fa_icon "shopping-cart", text: 'Add' %> 
+  <% end %>
+
+  <% else %>
     <%= button_to add_item_cart_path(product_id: product.id), class: 'btn' ,
     method: :post do %>
-      <%= fa_icon "shopping-cart", text: 'Add' %> 
+    <%= fa_icon "shopping-cart", text: 'Add' %> 
     <% end %>
+
+  <% end %>
   </div>
 </article>
