--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -9,15 +9,25 @@
       <h1><%= @product.name %></h1>
       <p><%= @product.description %></p>
       <div class="quantity">
-        <span><%= @product.quantity %> in stock at </span>
+        <% if @product.quantity > 0 %>
+          <span><%= @product.quantity %> in stock at </span>
+        <% else %>
+          <span class="soldout">Sold Out</span>
+          
+        <% end %>
         <span><%= number_to_currency(@product.price, precision: 2) %></span>
       </div>
       <div class="price">          
-        <%= button_to add_item_cart_path(product_id: @product.id), class: 'btn' , method: :post do %>
-          <%= fa_icon "shopping-cart", text: 'Add' %>
-        <% end %>          
+        <% if @product.quantity > 0 %>
+          <%= button_to add_item_cart_path(product_id: @product.id), class: 'btn', method: :post do %>
+            <%= fa_icon "shopping-cart", text: 'Add' %>
+          <% end %>
+        
+
+
+        
+        <% end %>
       </div>
     </div>
   </article>
-
 </section>
