--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -6,7 +6,43 @@
 
   <div class="order-summary jumbotron">
     <h4>Thank you for your order!</h4>
+    <p>We have sent a confirmation email to <strong><%= @order.email %></strong>.</p>
+
   </div>
+
+  <div class="order-details">
+  <h4>Order Details</h4>
+  
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>Image</th>
+        <th>Name</th>
+        <th>Description</th>
+        <th>Quantity</th>
+        <th>Price</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @line_items.each do |line_item| %>
+        <tr>
+          <td>
+            <%= image_tag(line_item.product.image_url, class: 'img-thumbnail', width: 50, height: 50) if line_item.product.image_url.present? %>
+          </td>
+          <td><%= line_item.product.name %></td>
+          <td><%= line_item.product.description %></td>
+          <td><%= line_item.quantity %></td>
+          <td><%= line_item.total_price.format %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+
+  <div class="order-total">
+  <h4>Order Total: <%= @order.total.format %></h4>
+  </div>
+</div>
+
 
   <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
 
