--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -14,6 +14,8 @@
     </ul>
   </div>
 
-  <%= link_to "Manage Available Products", admin_products_path, class: 'btn btn-lg btn-primary' %>
+  <%= link_to "Manage Current Products", admin_products_path, class: 'btn btn-lg btn-primary' %>
+  <%= link_to "Manage Current Categories", admin_categories_path, class: 'btn btn-lg btn-primary' %>
+
 
 </section>
