--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,14 @@
 <body>
 
   <%= render 'layouts/top_nav' %>
+  <nav>
+  <% if session[:user_id] %>
+    <%= link_to 'Logout', logout_path, method: :delete %>
+  <% else %>
+    <%= link_to 'Login', login_path %> |
+    <%= link_to 'Sign Up', signup_path %>
+  <% end %>
+</nav>
 
   <main class="container">
     <%= yield %>
