--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,13 @@
 </head>
 <body>
 
+
   <%= render 'layouts/top_nav' %>
   <nav>
+
+  
+<%= stylesheet_link_tag 'users', media: 'all', 'data-turbolinks-track' => true %>
+
   <% if session[:user_id] %>
     <%= link_to 'Logout', logout_path, method: :delete %>
   <% else %>
