--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -24,8 +24,8 @@
   </div class="mb-3">
 
   <div class="mb-3">
-    <%= form.label :password_confirmation, class: "form-label" %>
-    <%= form.password_field :password_confirmation, class: "form-control" %>
+    <%= form.label :confirm_password, class: "form-label" %>
+    <%= form.password_field :confirm_password, class: "form-control" %>
   </div>
 
   <div class="mb-3">
